sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:10: error: ';' expected but integer literal found.
        echange(i,i+1);ec=true}}n-=1
                                   ^